Move back to sbt 0.13 since it causes issues with intellij