@@ -1,2 +1,3 @@
+#!/usr/bin/env bash
 export SBT_OPTS=-Dfile.encoding=UTF8
-java $SBT_OPTS -Xmx512M -jar -XX:MaxPermSize=384m `dirname $0`/sbt-launch-1.0.2.jar "$@"
+java $SBT_OPTS -Xmx512M -jar `dirname $0`/sbt-launch-0.13.15.jar "$@"
